fix alignment

--- a/css/viscovery.css
+++ b/css/viscovery.css
@@ -272,13 +272,11 @@ section.container {
 }
 
 .section-2 .title-text {
-  padding-left : 80px;
   padding-top: 110px;
 }
 
 .section-3 .title-text,
 .section-4 .title-text {
-  padding-left : 80px;
   padding-top: 54px;
 }
 
